--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Children and death -- Juvenile fiction'
 - !lcsh 'Mothers and sons -- Juvenile fiction'
+- GITenberg
 title: History of Orrin Pierce
 url: http://www.gutenberg.org/ebooks/44658
